[package]
name = "speculate"
version = "0.2.0"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>", "Grégoire Geis <git@gregoirege.is>", "Alex Sobolev <code.sobolev@gmail.com>"]
description = "An RSpec inspired minimal testing framework for Rust."
repository = "https://github.com/alexobolev/speculate-rs"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["development-tools::testing"]
keywords = ["rspec", "test", "testing", ]

[dependencies]
proc-macro2 = { version = "^1.0.40", features = [ "nightly" ] }
syn = { version = "^1.0.46", features = [ "full" ] }
quote = "^1.0.21"
unicode-xid = "^0.2.4"

[lib]
proc-macro = true

[features]
default = []
